--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Select and Share a place using third party libraries. Practice project.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --progress"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,12 @@
   "homepage": "https://github.com/jreyesch/select-and-share-a-place#readme",
   "keywords": [],
   "devDependencies": {
+    "@types/googlemaps": "^3.43.3",
+    "ts-loader": "^9.2.8",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "axios": "^0.26.1"
   }
 }
